[gd_scene format=3 uid="uid://c6hivud8empdk"]

[ext_resource type="Script" uid="uid://ca36yvpqveon2" path="res://scripts/Buildings/EnergyCenterSripts/energy_center.gd" id="1_lyvcl"]
[ext_resource type="Texture2D" uid="uid://csd4mehia3ywv" path="res://assets/sprites/EnergyCenter.svg" id="2_v3u2r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lyvcl"]
radius = 52.03845

[sub_resource type="Animation" id="Animation_lyvcl"]
resource_name = "IDLE"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Factory_Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.105, -0.083333336, -0.017500004, 0, 0, 1, -0.083333336, 0.017500004, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Factory_Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.105, -0.083333336, -0.017500004, 0, 0, 1, -0.083333336, 0.017500004, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_ppifo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Factory_Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Factory_Sprite:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Factory_Sprite:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3u2r"]
_data = {
&"IDLE": SubResource("Animation_lyvcl"),
&"RESET": SubResource("Animation_ppifo")
}

[node name="EnergyCenter" type="Node2D" unique_id=1785093742 groups=["BuildingsToSave"]]
script = ExtResource("1_lyvcl")

[node name="Factory_Sprite" type="Sprite2D" parent="." unique_id=263640437]
texture = ExtResource("2_v3u2r")

[node name="AreaBox" type="Area2D" parent="." unique_id=1030650611]

[node name="Collision" type="CollisionShape2D" parent="AreaBox" unique_id=1693721070]
rotation = -3.1415927
shape = SubResource("CircleShape2D_lyvcl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1500284715]
libraries/ = SubResource("AnimationLibrary_v3u2r")
autoplay = &"IDLE"

[connection signal="area_entered" from="AreaBox" to="." method="_on_area_box_area_entered"]
[connection signal="mouse_entered" from="AreaBox" to="." method="_on_area_box_mouse_entered"]
[connection signal="mouse_exited" from="AreaBox" to="." method="_on_area_box_mouse_exited"]
